# vdi-clipboard

./: .gitignore  .mcp.json  LICENSE  README.md  data-channel-spec.md  pyproject.toml  requirements-client.txt  requirements.txt  run_helper.py  run_mcp.py  test_interference.py  test_loopback.py  test_mcp.py  vdi_cli.py
.github/workflows/: ci.yml
tests/: test_channel.py  test_codec.py  test_helper.py
vdi_channel/: __init__.py  channel.py  clipboard.py  codec.py  commands.py  config.py  errors.py  helper.py  mcp_server.py  transport.py
